--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dbot-h5p",
   "description": "html5please plugin for dbot",
+  "version": "0.0.1",
   "main": "dbot.js",
   "scripts": {
     "test": "jasmine-node dbot-h5p.spec.js"
